--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,6 +11,11 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+        <section>
+            <article>
+                <header>añsdklfjañslkdfjañsdfa</header>
+                <p>ñajkldfañ slkd fañlsd fjñasdfadf</p>
+            </article>
+        </section>
     </body>
 </html>
