--- a/public_html/index.html
+++ b/public_html/index.html
@@ -15,6 +15,7 @@ and open the template in the editor.
             <article>
                 <header>añsdklfjañslkdfjañsdfa</header>
                 <p>ñajkldfañ slkd fañlsd fjñasdfadf</p>
+                <pre>lgjgñjñgfgañlkjñlkjflfñakleonsdb</pre>
             </article>
         </section>
     </body>
